# compilers

./: .gitignore  build.sh  project-1.tex  run.sh  test.txt
Project-1/: README.md  build.sh  run.sh  submit.sh
Project-1/materials/example/: example.ir  out.ir
Project-1/materials/public_test_cases/: README.md
Project-1/materials/src/: Demo.java  IRInterpreter.java  Main.kt
cs4240/project1/: build.sh  project-1.tex
cs4240/project1/materials/: README.md
cs4240/project2/: all.sh  submit.sh  test.sh
cs4240/project2/mips-interpreter/: build.sh
cs4240/project3/: project-3-antlr.tex
cs4240/project3/demo/: README.md
cs6241/Homework0/: .gitignore  CMakeLists.txt  README.md  VM Setup.md  zip_submission.py  zip_submission.sh
cs6241/Homework0/.devcontainer/: Dockerfile  devcontainer.json
cs6241/Homework0/script/: build_project.sh
cs6241/Homework0/src/: Analyses.h  CMakeLists.txt  CounterAnalysis.cpp  Pass.cpp
cs6241/Homework0/test/: test.ll
cs6241/Homework1/: CMakeLists.txt  README.md  all_run.sh  compile.sh  fetch_and_run.sh  report_format.md  run.sh  submit.sh  sync.sh
cs6241/Homework1/.devcontainer/: Dockerfile  devcontainer.json
cs6241/Homework1/script/: CMakeLists.txt  run_pass.sh  run_pass_and_compile.sh  zip_submission.py
cs6241/Homework1/src/: CMakeLists.txt  HW1Registry.cpp  Part020.cpp  Part020.h  Part031.cpp  Part031.h  Part032.cpp  Part032.h  Part033.cpp  Part033.h  Part034.cpp  Part034.h  Part040.cpp  Part040.h  sequitur.cpp  trace_runtime.c
cs6241/Homework1/test_code/: CMakeLists.txt
cs6241/Homework1/test_code/bc/: CMakeLists.txt
cs6241/Homework1/test_code/cc/: CMakeLists.txt
cs6241/Homework1/test_code/jtest/: CMakeLists.txt  jtest.c
cs6241/Homework1/test_code/lbm/: CMakeLists.txt
cs6241/Homework1/test_code/mcf/: CMakeLists.txt
cs6241/Homework1/test_code/pr/: CMakeLists.txt
cs6241/Homework1/test_code/sssp/: CMakeLists.txt
cs6241/Homework1/test_code/tc/: CMakeLists.txt
materials/: sources.txt
materials/example/: example2.ir
materials/public_test_cases/quicksort/: dyn_inst_cnt.csv
materials/src/: Demo.java  Main.kt
materials/src/dce/: Block.java  Block.kt  Definitions.java  Main.java  Main.kt
materials/src/ir/: IRFunction.java  IRInstruction.java  IRProgram.java
project1/: run.sh
project1/materials/example/: example2.ir
project2/: build.sh  run.sh  submit.sh  test.sh
project2/mips-interpreter/: run.sh
project2/private_test_cases/arrParamTest/: .s  arrParam.ir  arrParam.s
project2/private_test_cases/arrayAssignmentTest/: .s
project2/private_test_cases/arrayInputTest/: .s  arrayInputTest.ir  arrayInputTest.s
project2/private_test_cases/aynRandTest/: .s  aynRand.ir  aynRand.s
project2/private_test_cases/basicArrayTest/: basicArrayTest.ir
project2/private_test_cases/binaryOpTest/: .s
project2/private_test_cases/branchTest/: 0.out  branch.ir  branch.s
project2/private_test_cases/charSyscallsTest/: charSyscalls.s
project2/private_test_cases/intSyscallsTest/: intSyscalls.s
project2/private_test_cases/manyParamLevelsTest/: 0.out  manyParamLevels.s
project2/private_test_cases/manyParamTest/: 0.out  manyParam.s
project2/private_test_cases/messyArrayTest/: 0.out  (+1 more)
project2/src/: Demo.java  IRInterpreter.java
project2/submit/: run.sh
(+126 files in other folders)
