set(BENCH mcf)
set(BENCH_BC ${BENCH}_link.bc)
set(BENCH_LL ${BENCH}.ll)
set(BENCH_ARGS -c -emit-llvm)

FILE(GLOB BENCH_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB BENCH_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
foreach (S ${BENCH_SOURCE})
  get_filename_component(S_NAME ${S} NAME_WE)
  set(S_BC ${S_NAME}.bc)
  add_custom_command(OUTPUT ${S_BC} COMMAND ${CLANG_TOOL} ${BENCH_ARGS} ${S} -o ${S_BC} DEPENDS ${S} ${BENCH_INCLUDE})
  list(APPEND BC_LIST ${S_BC})
endforeach()
add_custom_command(OUTPUT ${BENCH_BC} COMMAND ${LLVMLINK_TOOL} ${BC_LIST} -o ${BENCH_BC} DEPENDS ${BC_LIST})
add_custom_target(GEN_${BENCH_BC} DEPENDS ${BENCH_BC} COMMENT "Generate LLVM IR (.bc) for ${BENCH}")
add_custom_command(OUTPUT ${BENCH_LL} COMMAND ${LLVMDIS_TOOL} ${BENCH_BC} -o ${BENCH_LL} DEPENDS GEN_${BENCH_BC} COMMENT "Generate human-readable format of LLVM IR (.ll) for ${BENCH}")
add_custom_target(GEN_${BENCH} ALL DEPENDS GEN_${BENCH_BC} ${BENCH_LL} COMMENT "Build benchmark ${BENCH}")
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${BENCH_BC} DESTINATION test_code/llvm_ir RENAME ${BENCH}.bc)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${BENCH_LL} DESTINATION test_code/human_readable)
